# SugarPP

./: .gitignore  CMakeLists.txt  Doxyfile  GroupedCondition.hpp  README.html  README.md  When.hpp  contributing.md  main.cpp
.github/workflows/: ci.yml
IO/: CMakeLists.txt  IO.hpp  main.cpp
Range/: CMakeLists.txt  Enumerate.hpp  In.hpp  Range.hpp  main.cpp
When/: CMakeLists.txt  When.hpp  main.cpp  main2.cpp  when_impl.hpp
cmake/: SugarPPConfig.cmake  ciBuild.cmake
docs/: IO.md  Range.md  Types.md  When.md
examples/: CMakeLists.txt
examples/IO/: main.cpp
examples/Range/: CMakeLists.txt  main.cpp
examples/When/: CMakeLists.txt  main.cpp
include/sugarpp/: all.hpp
include/sugarpp/io/: io.hpp
include/sugarpp/lazy/: lazy.hpp
include/sugarpp/range/: enumerate.hpp  in.hpp  range.hpp
include/sugarpp/types/: types.hpp
include/sugarpp/when/: when.hpp
test/: CMakeLists.txt
test/source/io/: io.cpp
test/source/lazy/: lazy.cpp
test/source/range/: range.cpp
test/source/types/: to_string.cpp
test/source/when/: when.cpp
